[elastic_5_6] Fix tests